--- a/somos.html
+++ b/somos.html
@@ -3,7 +3,7 @@
 <head>
   <title>Quienes Somos-CMB</title>
   
-      <link rel="stylesheet" type="text/css" href="estilos.css">
+      <link rel="stylesheet" type="text/css" href="css/estilos.css">
       <link rel="icon" type="text/css" href="images/icono.ico">
 </head>
 <body>
