--- a/beneficios.html
+++ b/beneficios.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Beneficios-CMB</title>
   
-      <link rel="stylesheet" type="text/css" href="estilos.css">
+      <link rel="stylesheet" type="text/css" href="css/estilos.css">
       <link rel="icon" type="text/css" href="images/icono.ico">
       <script type="http://code.jquery.com/jquery-latest.js"></script>
 </head>
