--- a/formularios.html
+++ b/formularios.html
@@ -3,7 +3,7 @@
 <head>
   <title>Formularios-CMB</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1"/>
-      <link rel="stylesheet" type="text/css" href="estilos.css">
+      <link rel="stylesheet" type="text/css" href="css/estilos.css">
       <link rel="icon" type="text/css" href="images/icono.ico">
 </head>
 <body>
