--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
   }
 
   </style>
-  <center>
-  <h2>NOTICIAS</h2>
-  </center>
+  <h3 align="right">21/11/2018</h3>
+<center>
+<img src="images/bingo.jpg" alt="inicio" style="width:70%;">
+</center>
+<hr>
 <center>
 <img src="images/inicio.jpeg" alt="inicio" style="width:70%;">
 </center>
