--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </style>
   <h3 align="right">21/11/2018</h3>
 <center>
-<img src="images/bingo.jpg" alt="inicio" style="width:70%;">
+<img src="images/Bingo.jpg" alt="inicio" style="width:70%;">
 </center>
 <hr>
 <center>
