--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
   }
 
   </style>
+  <h3 align="right">05/03/2019</h3>
+<center>
+<img src="images/ASAMBLEA_2019.jpg" alt="inicio" style="width:70%;">
+</center>
+<hr><br><br>
+  <h3 align="center">EVENTO FIN DE AÑO 2018</h3><br>
+<center>
+<img src="images/Fin_de_Año2018.jpg" alt="inicio" style="width:70%;">
+</center>
+<hr>
   <h3 align="right">21/11/2018</h3>
 <center>
 <img src="images/Bingo.jpg" alt="inicio" style="width:70%;">
